[gd_scene load_steps=18 format=3 uid="uid://bqxxtnilnfhvi"]

[ext_resource type="Texture2D" uid="uid://c0jky3j1754dd" path="res://assets/image/open_scene/LOGO-V2-WRITE.png" id="1_jyhfs"]
[ext_resource type="Script" uid="uid://du21dghwktj4b" path="res://script/main.gd" id="1_tbgi4"]
[ext_resource type="FontFile" uid="uid://dquqhgyljfytr" path="res://assets/fonts/中文12像素.ttf" id="2_tbgi4"]
[ext_resource type="Texture2D" uid="uid://cr60mskle8miy" path="res://assets/image/open_scene/签名-白色抠图.png" id="3_tefeu"]
[ext_resource type="Texture2D" uid="uid://wqqu3chmie1f" path="res://assets/image/open_scene/白色ETN抠图.png" id="4_o6xl0"]

[sub_resource type="LabelSettings" id="LabelSettings_tbgi4"]
font = ExtResource("2_tbgi4")
font_size = 30

[sub_resource type="Animation" id="Animation_o6xl0"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("open_image_1:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("open_image_1:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("open_image_1:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("open_image_1:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("open_image_2:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("open_image_2:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("open_image_2:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("open_image_2:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("open_image_3:modulate:r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("open_image_3:modulate:g")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("open_image_3:modulate:b")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("open_image_3:modulate:a")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("bei_jin:size")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1920, 1080)]
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("open_image_3:size:x")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1084, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/14/type = "bezier"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("open_image_3:size:y")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(813, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/15/type = "bezier"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("open_image_3:position:x")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(418, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/16/type = "bezier"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("open_image_3:position:y")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(133.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("bei_jin:position")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/18/type = "bezier"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("bei_jin:modulate:r")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/19/type = "bezier"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("bei_jin:modulate:g")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/20/type = "bezier"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath("bei_jin:modulate:b")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/21/type = "bezier"
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/path = NodePath("bei_jin:modulate:a")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.47843137, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/22/type = "value"
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/path = NodePath("bei_jin:modulate")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/23/type = "value"
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/path = NodePath("open_image_3:modulate")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/24/type = "value"
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/path = NodePath("open_image_3:position")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-430, -322)]
}
tracks/25/type = "value"
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/path = NodePath("open_image_3:size")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(474.66663, 356)]
}

[sub_resource type="Animation" id="Animation_tefeu"]
resource_name = "open_animation_1"
length = 3.5
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("open_image_1:modulate:a")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("open_image_1:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(2.5333333, 3.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("open_image_1:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(2.5333333, 3.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("open_image_1:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(2.5333333, 3.5)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("open_image_1:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.083333336, 0.16666667, 0, 0),
"times": PackedFloat32Array(2.5333333, 3.5)
}

[sub_resource type="Animation" id="Animation_tipki"]
resource_name = "open_animation_2"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("open_image_2:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("open_image_2:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0, 1, -0.16666667, 0, 0, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 1, 3.4666667, 4.366667)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("open_image_2:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0, 1, -0.16666667, 0, 0, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 1, 3.4666667, 4.366667)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("open_image_2:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0, 1, -0.16666667, 0, 0, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 1, 3.4666667, 4.366667)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("open_image_2:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.083333336, -0.16666667, 0, 0, 1, -0.16666667, 0, 0, 0, 0, -0.083333336, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 1, 3.4666667, 4.366667)
}

[sub_resource type="Animation" id="Animation_85g3d"]
resource_name = "open_animation_3"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("open_image_3:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bei_jin:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.133333, 5.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(-1588, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("bei_jin:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.133333, 5.633333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1920, 1080), Vector2(1920, 1080), Vector2(1920, 1080)]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("open_image_3:modulate:r")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(2, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0, 1, -0.16666667, 0, 0, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 0.96666664, 3.4666667, 3.9666667)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("open_image_3:modulate:g")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(2, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0, 1, -0.16666667, 0, 0, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 0.96666664, 3.4666667, 3.9666667)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("open_image_3:modulate:b")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(2, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0, 1, -0.16666667, 0, 0, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 0.96666664, 3.4666667, 3.9666667)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("open_image_3:modulate:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(2, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.083333336, -0.16666667, 0, 0, 1, -0.16666667, 0, 0, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 0.96666664, 3.4666667, 3.9666667)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("open_image_3:size:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(1084, 0, 0, 0.33333334, 0, 1084, -0.33333334, 0, 0, 0),
"times": PackedFloat32Array(0, 3.9666667)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("open_image_3:size:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(813, 0, 0, 0.33333334, 0, 813, -0.33333334, 0, 0, 0),
"times": PackedFloat32Array(0, 3.9666667)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("open_image_3:position:x")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(418, 0, 0, 0.33333334, 0, 418, -0.33333334, 0, 0, 0),
"times": PackedFloat32Array(0, 3.9666667)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("open_image_3:position:y")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(133.5, 0, 0, 0.33333334, 0, 133.5, -0.33333334, 0, 0, 0),
"times": PackedFloat32Array(0, 3.9666667)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("bei_jin:modulate:r")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(2, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, 0, 0, 0.33333334, 0, 1, -0.33331668, 0, 1.6669434e-05, 0, 1, -1.6669434e-05, 0, 0.083333336, 0, 1, -0.01666665, 0, 0.066666685, 0, 1, -0.083333336, 0, 0.083333336, 0, 1, -0.083333336, 0, 0.083333336, 0, 1, -0.049999993, 0, 0.033333343, 0, 1, -0.033333343, 0, 0, 0),
"times": PackedFloat32Array(0, 4.133233, 4.133333, 4.233333, 4.633333, 5.133333, 5.433333, 5.633333)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("bei_jin:modulate:g")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(2, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, 0, 0, 0.33333334, 0, 1, -0.33331668, 0, 1.6669434e-05, 0, 1, -1.6669434e-05, 0, 0.083333336, 0, 1, -0.01666665, 0, 0.066666685, 0, 1, -0.083333336, 0, 0.083333336, 0, 1, -0.083333336, 0, 0.083333336, 0, 1, -0.049999993, 0, 0.033333343, 0, 1, -0.033333343, 0, 0, 0),
"times": PackedFloat32Array(0, 4.133233, 4.133333, 4.233333, 4.633333, 5.133333, 5.433333, 5.633333)
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("bei_jin:modulate:b")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(2, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, 0, 0, 0.33333334, 0, 1, -0.33331668, 0, 1.6669434e-05, 0, 1, -1.6669434e-05, 0, 0.083333336, 0, 1, -0.01666665, 0, 0.066666685, 0, 1, -0.083333336, 0, 0.083333336, 0, 1, -0.083333336, 0, 0.083333336, 0, 1, -0.049999993, 0, 0.033333343, 0, 1, -0.033333343, 0, 0, 0),
"times": PackedFloat32Array(0, 4.133233, 4.133333, 4.233333, 4.633333, 5.133333, 5.433333, 5.633333)
}
tracks/14/type = "bezier"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("bei_jin:modulate:a")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"handle_modes": PackedInt32Array(2, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, 0, 0, 0.33333334, 0, 1, -0.33331668, 0, 1.6669434e-05, 0, 1, -1.6669434e-05, 3.33322e-05, 0.083333336, -0.16663334, 0, -0.01666665, 0.0333333, 0.066666685, -0.13333337, 0, -0.083333336, 0.0506536, 0.083333336, -0.0506536, 0.39215687, -0.083333336, -0.024509802, 0.083333336, 0.024509802, 0.47058824, -0.049999993, -0.060784306, 0.033333343, 0.04052289, 0.47843137, -0.033333343, -0.0013071895, 0, 0),
"times": PackedFloat32Array(0, 4.133233, 4.133333, 4.233333, 4.633333, 5.133333, 5.433333, 5.633333)
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("bei_jin:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(4.166567, 4.166667, 4.266667, 4.666667, 5.166667, 5.4666667, 5.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 0.39215687), Color(1, 1, 1, 0.47058824), Color(1, 1, 1, 0.47843137)]
}

[sub_resource type="Animation" id="Animation_i3o6h"]
resource_name = "open_animation_4"
length = 4.5
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bei_jin:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.62352943)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("open_image_3:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("open_image_3:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.51782304, 3.5127997, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-471, -65), Vector2(-471, -65), Vector2(-52, -84), Vector2(-71, -87)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bei_jin:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5, 3.5, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1920, -1), Vector2(-1750, 0), Vector2(-1556, 0), Vector2(-1586, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("open_image_3:size")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.51782304, 3.5127997, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(474.66663, 356), Vector2(474.66663, 356), Vector2(474.66663, 356), Vector2(474.66663, 356)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbgi4"]
_data = {
&"RESET": SubResource("Animation_o6xl0"),
&"open_animation_1": SubResource("Animation_tefeu"),
&"open_animation_2": SubResource("Animation_tipki"),
&"open_animation_3": SubResource("Animation_85g3d"),
&"open_animation_4": SubResource("Animation_i3o6h")
}

[sub_resource type="LabelSettings" id="LabelSettings_tipki"]
font = ExtResource("2_tbgi4")
font_size = 100

[sub_resource type="InputEventKey" id="InputEventKey_tbgi4"]
device = -1
keycode = 4194309

[sub_resource type="InputEventKey" id="InputEventKey_tefeu"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="InputEventKey" id="InputEventKey_i3o6h"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_o6xl0"]
events = [SubResource("InputEventKey_tbgi4"), SubResource("InputEventKey_tefeu"), SubResource("InputEventKey_i3o6h")]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tbgi4")
metadata/_edit_vertical_guides_ = [333.0, 1920.0]

[node name="Label_open" type="Label" parent="."]
z_index = 40
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 3.0
offset_top = 340.0
offset_right = 3.0
offset_bottom = 475.0
grow_horizontal = 2
grow_vertical = 2
text = "点击空白处以继续"
label_settings = SubResource("LabelSettings_tbgi4")
horizontal_alignment = 1

[node name="Open_Ani_Player_1" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tbgi4")
}

[node name="Open_Ani_Player_2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tbgi4")
}

[node name="bei_jin" type="ColorRect" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.49803922, 1, 1)

[node name="open_image_1" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 5
layout_mode = 0
offset_left = 270.0
offset_top = 1039.0001
offset_right = 1036.6802
offset_bottom = 2401.6543
rotation = -1.5358897
texture = ExtResource("1_jyhfs")
expand_mode = 1

[node name="open_image_2" type="Label" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.5
offset_right = 200.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
text = "冰川小未"
label_settings = SubResource("LabelSettings_tipki")

[node name="qian_min" type="TextureRect" parent="open_image_2"]
z_index = 2
layout_mode = 0
offset_left = 332.0
offset_top = 66.0
offset_right = 501.43024
offset_bottom = 176.0
rotation = -0.20769419
texture = ExtResource("3_tefeu")
expand_mode = 1

[node name="open_image_3" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1390.0
offset_top = -862.0
offset_right = -915.3334
offset_bottom = -506.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_o6xl0")
expand_mode = 1

[node name="open_button" type="Button" parent="."]
visible = false
z_index = 50
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
button_mask = 7
shortcut = SubResource("Shortcut_o6xl0")
flat = true
